media-factory: complete DSCP QoS setting support
Submitted by gre..@..ot.com
Link to original bug (#745460)
Description
Buffer size set at media factory level is not applied down to UDP sink.
This can be easily verified by running one of the sample tests:
- with GST_DEBUG="multiudpsink:7"
- modified to use gst_rtsp_media_factory_set_buffer_size()
- with suitable permissions.
Moreover, it is not possible to configure the DSCP/QoS field of UDP sinks neither at the media factory level nor at the media level.
Althought it is possible for an application to set this using gst_rtsp_stream_set_dscp_qos() at media-configure time, an additional handy "gst_rtsp_media_factory_set_dscp_qos()" method would be more consistent with the overall factory/media/stream API.